# dadaki

./: .firebaserc  .gitignore  .mcp.json  BUILD-PLAN-online-split.md  FEATURES-PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE  PROGRESS.md  README.md  TASK-lib-app-split.md  biome.json  debug_bounds.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  puppeteer_bounds.ts  puppeteer_test_flatten.ts  renderer_test.ts  style.css  test-all.sh  test_ck.cjs  tsconfig.json  vite.config.ts
.agents/docs/: ARCHITECTURE.md  COLLABORATION.md  CONVENTIONS.md  DATA_MODEL.md  (+1 more)
.claude/: launch.json  settings.local.json
backup_js/: input.js  main.js  renderer.js  scene.js  smart_paint.js  ui.js
engine/: Cargo.toml
engine/src/: lib.rs  proto.rs  vector_network.rs
engine/wasm-pack-v0.12.1-x86_64-apple-darwin/: wasm-pack.stamp
public/: robots.txt
scripts/: puppeteer_bounds.ts  puppeteer_test_flatten.ts  renderer_test.ts
src/: about_dialog.ts  adaptive_tiles.ts  align.ts  analytics.ts  app_menu.ts  backup_dialog.ts  blend.ts  boolean_ops.ts  breadcrumb.ts  color_picker.ts  context.ts  context_bar.ts  dev_stress.ts  document.test.ts  document_manager.test.ts  document_manager.ts  equal_spacing.ts  export_dialog.ts  file_io.ts  file_service.test.ts  file_service.ts  firebase_analytics.ts  fonts.ts  gesture_history.test.ts  gradient_edit.ts  guides.ts  icons.ts  input.ts  input_drag.test.ts  live_paint.test.ts  main.ts  offset_path.ts  outline_stroke.ts  path_ops.split.test.ts  path_ops.test.ts  path_ops.ts  pathfinder.ts  persistence.test.ts  persistence.ts  renderer.ts  (+18 more)
(+3 files in other folders)
